<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/signup">
    <fragment
        android:id="@+id/signup"
        android:name="com.example.yjahz.ui.auth.registration.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_registration">
    <action
        android:id="@+id/login_action"
        app:destination="@id/login"
        app:restoreState="true"
        app:popUpTo="@id/signup"
        app:popUpToSaveState="true"
        />
        <action
            android:id="@+id/home_action"
            app:destination="@id/home"
            />
    </fragment>
    <fragment
        android:id="@+id/login"
        android:name="com.example.yjahz.ui.auth.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/signup_action"
            app:destination="@id/signup"
            app:restoreState="true"
            app:popUpTo="@id/login"
            app:popUpToSaveState="true"
            />
        <action
            android:id="@+id/home_action"
            app:destination="@id/home"
            />
    </fragment>
    <fragment
        android:id="@+id/home"
        android:name="com.example.yjahz.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"/>
</navigation>