<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <variable
            name="registrationViewModel"
            type="com.example.yjahz.ui.auth.registration.RegistrationViewModel" />
        <variable
            name="registrationFragment"
            type="com.example.yjahz.ui.auth.registration.SignUpFragment" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sign_up_header"
     >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:id="@+id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias=".16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/logo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/parent"
                android:paddingHorizontal="@dimen/_20sdp">
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:shapeAppearanceOverlay="@style/ShapeAppearance.CardView"
                    app:cardElevation="5dp">
                    <TextView
                        android:padding="@dimen/_20sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"/>


                </com.google.android.material.card.MaterialCardView>


                <TextView
                    android:id="@+id/nameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintVertical_bias=".1"
                    app:layout_constraintBottom_toBottomOf="parent"

                    android:text="@string/user_name"
                    android:textSize="@dimen/_12ssp"
                   app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nameContainer"
                   app:layout_constraintTop_toBottomOf="@id/nameTitle"
                    app:cardCornerRadius="@dimen/_12sdp"
                    app:strokeWidth="@dimen/_1sdp"
                    app:strokeColor="#B3B3B3"
                    android:backgroundTint="@color/text_field_background"
                    >
                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:id="@+id/nameEditText"
                        android:hint="Write 14 character"
                        android:textColorHint="@color/text_field_background"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:maxLength="11"
                        android:textAlignment="viewStart" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="please enter your name"
                    android:textColor="@android:color/holo_red_dark"
                    android:id="@+id/name_error"
                    android:visibility="@{registrationViewModel.isUserNameValid?View.GONE:View.VISIBLE}"
                    android:paddingHorizontal="10dp"
                  app:layout_constraintTop_toBottomOf="@id/nameContainer"
                    />

                <TextView
                    android:id="@+id/emailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_10sdp"
                    android:text="@string/email"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintTop_toBottomOf="@id/name_error"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   android:id="@+id/emailContainer"
                    app:layout_constraintTop_toBottomOf="@id/emailTitle"
                    app:cardCornerRadius="@dimen/_12sdp"
                    app:strokeWidth="@dimen/_1sdp"
                    app:strokeColor="#B3B3B3"
                    android:backgroundTint="@color/text_field_background"
                    >

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:background="@color/white"
                        android:hint="Write your email"
                        android:textColorHint="@color/text_field_background"
                        android:textAlignment="viewStart" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="please enter your email"
                    android:textColor="@android:color/holo_red_dark"
                    android:id="@+id/email_error"
                    android:visibility="@{registrationViewModel.isEmailValid?View.GONE:View.VISIBLE}"
                    android:paddingHorizontal="10dp"
                    app:layout_constraintTop_toBottomOf="@id/emailContainer"
                    />
                <TextView
                    android:id="@+id/phoneNumberTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_10sdp"
                    android:text="@string/phoneNumber"
                    android:textSize="@dimen/_12ssp"
                   app:layout_constraintTop_toBottomOf="@id/email_error"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/phoneNumberTitle"
                    android:id="@+id/phoneNumberContainer"
                    app:cardCornerRadius="@dimen/_12sdp"
                    app:strokeWidth="@dimen/_1sdp"
                    app:strokeColor="#B3B3B3"
                    android:backgroundTint="@color/text_field_background"
                    >

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/phoneEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:background="@color/white"
                        android:hint="Write 11 numbers"
                        android:textColorHint="@color/text_field_background"
                        android:textAlignment="viewStart" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="please enter your mobile number"
                    android:textColor="@android:color/holo_red_dark"
                    android:id="@+id/phone_error"
                    android:visibility="@{registrationViewModel.isPhoneValid?View.GONE:View.VISIBLE}"
                    android:paddingHorizontal="10dp"
                    app:layout_constraintTop_toBottomOf="@id/phoneNumberContainer"
                    />

                <TextView
                    android:id="@+id/passwordTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_10sdp"
                    android:text="@string/passsword"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintTop_toBottomOf="@id/phone_error"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/passwordContainer"
                    app:layout_constraintTop_toBottomOf="@id/passwordTitle"


                    app:cardCornerRadius="@dimen/_12sdp"
                    app:strokeWidth="@dimen/_1sdp"
                    app:strokeColor="#B3B3B3"
                    android:backgroundTint="@color/text_field_background"
                    >

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:background="@color/white"
                        android:hint="Write 8 characters at least"
                        android:textColorHint="@color/text_field_background"
                        android:textAlignment="viewStart" />
                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="please enter your password with 8 characters at least"
                    android:textColor="@android:color/holo_red_dark"
                    android:id="@+id/password_error"
                    android:visibility="@{registrationViewModel.isPasswordValid?View.GONE:View.VISIBLE}"
                    android:paddingHorizontal="10dp"
                    app:layout_constraintTop_toBottomOf="@id/passwordContainer"
                    />


                <TextView
                    android:id="@+id/confirmPasswordTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/_10sdp"
                    android:text="@string/comfirm_password"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintTop_toBottomOf="@id/password_error"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <com.google.android.material.card.MaterialCardView
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/confirmPasswordContainer"
                    app:layout_constraintTop_toBottomOf="@id/confirmPasswordTitle"
                    app:cardCornerRadius="@dimen/_12sdp"
                    app:strokeWidth="@dimen/_1sdp"
                    app:strokeColor="#B3B3B3"
                    android:backgroundTint="@color/text_field_background"
                    >

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/confirmPasswordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="Write password again"
                        android:textColorHint="@color/text_field_background"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:background="@color/white"
                        android:textAlignment="viewStart" />
                </com.google.android.material.card.MaterialCardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="confirm password not match your password"
                    android:textColor="@android:color/holo_red_dark"
                    android:id="@+id/confirmPassword_error"
                    android:visibility="@{registrationViewModel.isPasswordConfirmed?View.GONE:View.VISIBLE}"
                    android:paddingHorizontal="10dp"
                    app:layout_constraintTop_toBottomOf="@id/confirmPasswordContainer"
                    />
                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sign up"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    android:paddingVertical="@dimen/_10sdp"
                    android:elevation="0dp"
                    android:stateListAnimator="@null"
                    android:id="@+id/signUp"
                    app:elevation="0dp"
                    android:onClick="@{()->registrationFragment.registration.invoke()}"
                   android:backgroundTint="#00957B"
                    app:cornerRadius="15dp"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/confirmPassword_error"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@id/signUp"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/_10sdp"
                    android:onClick="@{()->registrationFragment.login.invoke()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_title"
                        android:textSize="@dimen/_10ssp"

                        android:text="have an account?"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_secondary"
                        android:textSize="@dimen/_10ssp"
                        android:id="@+id/login"
                        android:onClick="@{()->registrationFragment.login.invoke()}"
                        android:text="@string/login"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>